# soma-base

./: .buildinfo  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  api.html  appveyor.yml  config-cpp-libgui.template  config-cpp-library.template  config-sip.template  config-sipgui.template  ez_setup.py  genindex.html  index.html  objects.inv  project_info.cmake  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.py  soma-base.bcg  soma.bcg
.doctrees/: api.doctree  environment.pickle  index.doctree
_modules/: index.html
_modules/soma/: application.html  archive.html  bufferandfile.html  crypt.html  debug.html  factory.html  fom.html  global_naming.html  html.html  importer.html  logging.html  mpfork.html  notification.html  path.html  qimage2ndarray.html  safemkdir.html  serialization.html  singleton.html  somatime.html  sorted_dictionary.html  sqlite_tools.html  stringtools.html  thread_calls.html  translation.html  uuid.html
_modules/soma/controller/: controller.html
_modules/soma/minf/: api.html
_modules/soma/qt_gui/: controller_widget.html  io.html  qtThread.html  qt_backend.html  rangeSlider.html  timered_widgets.html
_modules/soma/utils/: find_library.html  functiontools.html  loader.html  weak_proxy.html
_sources/: api.rst.txt  index.rst.txt
cmake/: soma-base-config.cmake.in  soma-base-use.cmake.in
config/: config.h.in  config.py.in
doc/examples/: affine_transformation.ui  combine_transformations.ui  soma-traits-example.py
doc/sphinx/: api.rst  conf.py  gui_dev.rst  index.rst
examples/: CMakeLists.txt
examples/soma/: designer_example.py  designer_example.ui  list_tree_example.py  text_example.html  text_example.py
examples/soma/wip/: application_example.py  minf_example.minf  minf_example.py  signature_example.py  signature_interactive_demo.py  signature_qt4_example.py  signature_tg_example.cfg  signature_tg_example.py
foms/: formats-brainvisa-1.0.json  morphologist-cati-memento.json  shared-brainvisa-1.0.json
python/: CMakeLists.txt
python/soma/: __init__.py  activate_virtualenv.py  api.py  application.py  archive.py  argparse.py  bufferandfile.py  config.py  controller.py  crypt.py  debug.py  decorators.py  enum.py  env.py  factory.py  fom.py  functiontools.py  global_naming.py  html.py  httpupload.py  icon_factory.py  importer.py  info.py  info.py.orig  logging.py  mpfork.py  mpfork2.py  notification.py  path.py  proxy.py  pyro.py  qimage2ndarray.py  safemkdir.py  serialization.py  singleton.py  somatime.py  sorted_dictionary.py  sqlite_tools.py  stringtools.py  study_data.py  (+8 more)
python/soma/controller/: __init__.py  controller.py  factory.py  field.py  path.py  trait_utils.py
python/soma/databases/: __init__.py  api.py  sqlite_tools.py
python/soma/gui/: __init__.py  api.py  base.py  file_selection.py  icon_factory.py  qt_backend.py  trait_to_widget.py  widget_controller_connection.py  widget_controller_creation.py  widget_factory.py
python/soma/minf/: CMakeLists.txt  __init__.py  api.py  error.py  reader.py  tree.py  writer.py  xhtml.py  xml_reader.py  xml_tags.py  xml_writer.py
python/soma/pipeline/: __init__.py  __main__.py  memory.py  pipeline.py  pipeline_with_fom.py  pipeline_workflow.py  process.py  process_with_fom.py  sandbox.py  spm_memory_utils.py  study.py  topological_sort.py
python/soma/plugins/: CMakeLists.txt  __init__.py
python/soma/process/: __init__.py  loader.py  nipype_process.py  process.py
python/soma/qt3gui/: __init__.py  api.py  automatic.py  designer.py  file_dialog.py  icons.py  io.py  list_tree_widgets.py  qt3thread.py  text.py  timered_widgets.py  vscrollframe.py
python/soma/qt4gui/: api.py  automatic.py  designer.py  icons.py  io.py  list_tree_widgets.py  qtThread.py  rangeSlider.py  simple_table.py  text.py  timered_widgets.py
python/soma/qt_gui/: collapsable.py  collapsible.py  controller_widget.py  generic_table_editor.py  headless.py  io.py  ipkernel_tools.py  predef_lineedit.py  qtThread.py  qt_backend.py  qvtabbar.py  rangeSlider.py  timered_widgets.py
python/soma/qtgui/: __init__.py  api.py
python/soma/sandbox/: BrainVISA_310.json  ReadMe  Traitement.py  TraitementJSON.py  process.py
python/soma/signature/: CMakeLists.txt  __init__.py  api.py  signature.py
python/soma/signature/attributetypes/: CMakeLists.txt  any.py  boolean.py  bytes.py  choice.py  fileName.py  float.py  integer.py  number.py  openedchoice.py  sequence.py  unicode.py
python/soma/signature/qt3gui/: boolean_qt3gui.py  bytes_qt3gui.py  choice_qt3gui.py  fileNamePanel.ui  fileName_qt3gui.py  number_qt3gui.py  openedchoice_qt3gui.py  sequence_qt3gui.py  signature_qt3gui.py  unicode_qt3gui.py
python/soma/signature/qt4gui/: CMakeLists.txt  __init__.py  boolean_qt4gui.py  bytes_qt4gui.py  choice_qt4gui.py  fileName_qt4gui.py  number_qt4gui.py  openedchoice_qt4gui.py  sequence_qt4gui.py  signature_qt4gui.py  unicode_qt4gui.py
python/soma/signature/tggui/: __init__.py  boolean_tggui.py  bytes_tggui.py  choice_tggui.py  fileName_tggui.py  number_tggui.py  sequence_tggui.py  signature_tggui.py  unicode_tggui.py
python/soma/study_config/: __init__.py  (+4 more)
python/soma/wip/: CMakeLists.txt  __init__.py  configuration.py  configuration_qt3gui.py  configuration_qt4gui.py  io.py  singleton.py  temporary.py
python/soma/wip/application/: CMakeLists.txt  __init__.py  api.py  application.py  icons.py  plugins.py
python/test/: load_pilots.py  test_soma_base.py
share/: CMakeLists.txt
share/foms/: formats-brainvisa-1.0.json  morphologist-brainvisa-1.0.json  morphologist-brainvisa-pipeline-1.0.json  morphologist-cati-memento.json  shared-brainvisa-1.0.json
soma-dev/: soma-recipe.yaml
soma-env/: soma-env-recipe.yaml
src/: soma_src.pro
src/libsomaqtgui/: CMakeLists.txt  gui.pro
src/sip/: soma_sip.pro
src/sipsomaqt/: CMakeLists.txt  soma_qt.sip  soma_qt3.sip  soma_qt4.sip
src/sipsomaqtgui/: CMakeLists.txt  gradwidget.sip  gradwidget_qt3.sip  gradwidget_qt4.sip  sip.pro
tests/: CMakeLists.txt
tests/soma/: test_minf.py  test_uuid.py
wip/: projects_dependencies.odg
(+134 files in other folders)
